--- a/client/package.json
+++ b/client/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "client",
-    "version": "1.0.0",
-    "main": "index.js",
-    "license": "MIT",
-    "dependencies": {
-        "axios": "^1.5.1",
-        "next": "^13.5.4",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "sass": "^1.69.1"
-    },
-    "devDependencies": {
-        "@types/react": "^18.2.27",
-        "typescript": "5.2.2",
-        "webpack": "^5.88.2"
-    },
-    "scripts": {
-        "start": "next"
-    }
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "13.5.4"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4"
+  }
 }
