--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,7 @@
 {
     "name": "server",
-    "type": "module",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "index.ts",
     "license": "MIT",
     "dependencies": {
         "cors": "^2.8.5",
@@ -10,9 +9,11 @@
         "uuid": "^9.0.1"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.14",
+        "@types/express": "^4.17.19",
         "nodemon": "^3.0.1"
     },
     "scripts": {
-        "start": "nodemon ./src/index.ts"
+        "start": "nodemon  ./src/index.ts"
     }
 }
