--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.14",
         "@types/express": "^4.17.19",
+        "@types/uuid": "^9.0.5",
         "nodemon": "^3.0.1"
     },
     "scripts": {
