--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,17 @@
     "main": "index.ts",
     "license": "MIT",
     "dependencies": {
+        "apollo-server": "^3.12.1",
+        "apollo-server-express": "^3.12.1",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "graphql": "^16.8.1",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.14",
         "@types/express": "^4.17.19",
+        "@types/graphql": "^14.5.0",
         "@types/uuid": "^9.0.5",
         "nodemon": "^3.0.1"
     },
