--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,19 @@
     "license": "MIT",
     "dependencies": {
         "axios": "^1.5.1",
+        "graphql": "^16.8.1",
+        "graphql-request": "^6.1.0",
+        "graphql-tag": "^2.12.6",
         "next": "^13.5.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
         "sass": "^1.69.1"
     },
     "devDependencies": {
+        "@types/graphql": "^14.5.0",
         "@types/react": "^18.2.27",
+        "@types/react-query": "^1.2.9",
         "typescript": "5.2.2",
         "webpack": "^5.88.2"
     },
